--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -44,3 +44,19 @@
   background-color: #8a2b06;
   color: white;
 }
+
+.li{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 20px 4px 8px 0 rgba(77, 77, 77, 0.2), 0 6px 20px 0 rgba(73, 73, 73, 0.19);
+
+
+font-size: 17px;
+font-family: Georgia, 'Times New Roman', Times, serif;
+
+}
